--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 </head>
 
 <body>
-    <!-- NOTE -->
-
 <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -27,64 +25,69 @@
         </div>
 </header>
 
-<main>
-    <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./images/search-engine-optimization.jpg" class="float-left" alt="Image of notebook with letters SEO in thinking bubble with workds backlink, content, headings, mobile compability, social media and link building around this bubble. Coffe, laptop and pencil holder surrounding this notebook. Pencil holder contains different color pencils and markers. A magnifying glass on the opened laptop.">
+    <figure class="hero" alt="placeholder"></figure>
+
+    <article class="content">
+
+        <section id="search-engine-optimization" class="search-engine-optimization">
+            <img src="./images/search-engine-optimization.jpg" class="float-left" alt="Image of notebook with letters SEO in thinking bubble with workds backlink, content, headings, mobile compability, social media and link building around this bubble. Coffe, laptop and pencil holder surrounding this notebook. Pencil holder contains different color pencils and markers. A magnifying glass on the opened laptop."/>
             <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./images/online-reputation-management.jpg" class="float-right" atl="Over the shoulder image of person using phone with left hand and laptop trackpad with their right hand. On laptop screen, the work Reputation as the heading and increasing graph and pie chart below. Black cup and second phone also on the table.">
+                <p>
+                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                </p>
+        </section>
+
+        <section id="online-reputation-management" class="online-reputation-management">
+            <img src="./images/online-reputation-management.jpg" class="float-right" atl="Over the shoulder image of person using phone with left hand and laptop trackpad with their right hand. On laptop screen, the work Reputation as the heading and increasing graph and pie chart below. Black cup and second phone also on the table."/>
             <h2>Online Reputation Management</h2>
-            <p>
+                <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./images/social-media-marketing.jpg" class="float-left" alt="Arial photo of 6 people working. One has a laptop, another has a tablet, others have notebooks, and cups on the talbe. Different colored text bubbles with the words Share, Like, Tweet, and Media. Different color icons.">
+                </p>
+        </section>
+
+        <section id="social-media-marketing" class="social-media-marketing">
+            <img src="./images/social-media-marketing.jpg" class="float-left" alt="Arial photo of 6 people working. One has a laptop, another has a tablet, others have notebooks, and cups on the talbe. Different colored text bubbles with the words Share, Like, Tweet, and Media. Different color icons."/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
+        </section>
 
-    <div class="benefits">
-        <div class="benefit-lead">
+    </article>
+
+    <aside id="aside1" class="benefits">
+
+        <section class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./images/lead-generation.png" alt="Half of gear on top, followed by funnel with down arrow inside the funnel, and dollar sign at end/botton of funnel.">
+             <img src="./images/lead-generation.png" alt="Half of gear on top, followed by funnel with down arrow inside the funnel, and dollar sign at end/botton of funnel."/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </section>
+
+        <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./images/brand-awareness.png" alt="Image depicts man in suit and tie and the head is lightbulb.">
+            <img src="./images/brand-awareness.png" alt="Image depicts man in suit and tie and the head is lightbulb."/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </section>
+
+        <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./images/cost-management.png" alt="Three circles with dollar signs insided and a gear in the background.">
+                <img src="./images/cost-management.png" alt="Three circles with dollar signs insided and a gear in the background."/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
-</main>
+        </section>
+    </aside>
 
-<footer>
-    <div class="footer">
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2024 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
-</footer>
+    </footer>
 
 </body>
 
