fixed nav in HTML and CSS

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-
 <head>
     <meta charset="UTF-8"/>
 <!-- this links the style sheet CSS to add the styling of fonts, colors, etc. -->
@@ -11,26 +10,21 @@
 </head>
 
 <body>
-<header class="header">
-<!-- headers -->
-        <h1>Hori<span class="seo">seo</span>n</h1>
-
-<!-- nav = navigation which helps navigate the page (link group) -->
-        <nav>
-            <ul>
+    <header class="header">
+    <!-- page header -->
+    <h1>Hori<span class="seo">seo</span>n</h1>
+    <!-- the span class helps the style sheet with to color styling -->
+    
+    <!-- nav = navigation which helps navigate the page (link group) -->
+    <nav>
+        <ul>
                 <!-- ul = unordered list and li = is the list/item in list -->
-                <li>
-                    <!-- a href = creates hyperlink to that part of webpage -->
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
-        </nav>
+                <!-- a href = creates hyperlink to that part of webpage -->
+        <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
+        <li><a href="#online-reputation-management">Online Reputation Management</a></li>
+        <li><a href="#social-media-marketing">Social Media Marketing</a></li>
+        </ul>
+    </nav>
 </header>
 
 <main>
